FIX header toggle button subnavbar collapse (#38)
* modify eslint files

* remove styles from index

* modify package json in order to remove config errors and dependency updates

* modify gitignore

* change indec from css to scss and add mobile responsive stiles

* modify header style file name and add styles for menu toggler

* modify indexa styles import

* modify socialmedia nav styles and imports at each component

* create colors and fonts styles

* modify styles

* add functionality to close the SubNavbar component when clicking outside

--- a/src/components/Header/SocialMediaNavBar/_socialMediaIcon.scss
+++ b/src/components/Header/SocialMediaNavBar/_socialMediaIcon.scss
@@ -4,8 +4,8 @@
 }
 
 .smi_social-media-logo {
-  max-height: 25px;
-  max-width: 25px;
+  max-height: 3rem;
+  max-width: 3rem;
 }
 
 @media (min-width: 768px) {
@@ -20,7 +20,7 @@
 
 @media (max-width: 768px) {
   .smi_social-media-logo {
-    max-height: 40px;
-    max-width: 40px;
+    max-height: 2.5rem;
+    max-width: 2.5rem;
   }
 }
